--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,10 +1,10 @@
 spring:
   basePackage: app
   datasource:
-    jdbc-url: jdbc:postgresql://localhost:5432/test
+    jdbc-url: jdbc:postgresql://${DB_HOST}:5432/${DB_NAME}
     driverClassName: org.postgresql.Driver
-    username: postgres
-    password: root
+    username: ${POSTGRES_USER}
+    password: ${POSTGRES_PASSWORD}
 
   jpa:
     hibernate:
